[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/grtsapvedbj61.png" type="Texture" id=1]
[ext_resource path="res://Assets/arial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/mainmenuScript.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 51
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 0
margin_right = 1027.0
margin_bottom = 597.0
texture = ExtResource( 1 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 0.760784, 0.498039, 0.25098, 1 )
margin_left = 171.0
margin_top = 37.0
margin_right = 931.0
margin_bottom = 268.0
custom_fonts/normal_font = SubResource( 1 )
text = "Welcome to Ghost Of Skeletons
       (You Know Who He Is)
"

[node name="Play" type="Button" parent="."]
modulate = Color( 0.160784, 0.717647, 0.0235294, 1 )
margin_left = 361.0
margin_top = 212.0
margin_right = 626.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 2 )
text = "Play"
flat = true

[node name="AboutGame" type="Button" parent="."]
modulate = Color( 0.160784, 0.717647, 0.0235294, 1 )
margin_left = 304.0
margin_top = 308.0
margin_right = 686.0
margin_bottom = 442.0
custom_fonts/font = SubResource( 2 )
text = "AboutGame"
flat = true

[node name="WhoMadeIt\?" type="Button" parent="."]
modulate = Color( 0.160784, 0.717647, 0.0235294, 1 )
margin_left = 302.0
margin_top = 425.0
margin_right = 707.0
margin_bottom = 559.0
custom_fonts/font = SubResource( 2 )
text = "Who Made It?"
flat = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="AboutGame" to="." method="_on_AboutGame_pressed"]
[connection signal="pressed" from="WhoMadeIt?" to="." method="_on_WhoMadeIt_pressed"]
